--- a/mvc-project-workshop/pom.xml
+++ b/mvc-project-workshop/pom.xml
@@ -85,8 +85,8 @@
         </dependency>
         <dependency>
             <groupId>org.hibernate.validator</groupId>
-            <artifactId>hibernate-validator-annotation-processor</artifactId>
-            <version>6.0.2.Final</version>
+            <artifactId>hibernate-validator</artifactId>
+            <version>6.1.0.Final</version>
         </dependency>
         <dependency>
             <groupId>javax.el</groupId>
