--- a/advanced-query/src/main/resources/application.properties
+++ b/advanced-query/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 #Data Source Properties
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/shampoo_db?createDatabaseIfNotExist=true
-spring.datasource.username=root
-spring.datasource.password=bonnano1313.
+spring.datasource.username=****
+spring.datasource.password=****
 spring.datasource.initialization-mode=always
 spring.datasource.data=classpath:shampoo-company-insert.sql
 
