--- a/most-wanted-exam/src/main/resources/application.properties
+++ b/most-wanted-exam/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 #Database Properties
 spring.datasource.driverClassName = com.mysql.cj.jdbc.Driver
 spring.datasource.url = jdbc:mysql://localhost:3306/most_wanted_db?useSSL=false&createDatabaseIfNotExist=true
-spring.datasource.username = root
-spring.datasource.password = bonnano1313.
+spring.datasource.username = ****
+spring.datasource.password = ****
 
 #JPA Properties
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDBDialect
