--- a/spring-auto-mapping-demo-ex/src/main/resources/application.properties
+++ b/spring-auto-mapping-demo-ex/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 #Data Source Properties
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/spring_auto_game_store?createDatabaseIfNotExist=true&amp
-spring.datasource.username=root
-spring.datasource.password=bonnano1313.
+spring.datasource.username=****
+spring.datasource.password=****
 #JPA Properties
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.properties.hibernate.format_sql=TRUE
