--- a/xml-ex-demo/src/main/resources/application.properties
+++ b/xml-ex-demo/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 #Data Source Properties
 spring.datasource.driverClassName = com.mysql.cj.jdbc.Driver
 spring.datasource.url = jdbc:mysql://localhost:3306/xml_ex_demo_db?createDatabaseIfNotExist=true&amp
-spring.datasource.username = root
-spring.datasource.password = bonnano1313.
+spring.datasource.username = ****
+spring.datasource.password = ****
 
 #JPA Properties
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
